configure audit logs for entire auth controller
